--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -4,11 +4,11 @@ body {
   text-align: center;
 }
 
-#left{
+.alignleft{
   left: auto;
 }
 
-#right{
+.alignright{
   position: absolute;
   float: right;
 }
