--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -21,7 +21,7 @@ body {
 .aligncenter{
   position: relative;
   background-color: lightgray;
-  align-items: center;
+  align-content: center;
   float: center;
   height: 1080px;
   width: 600px;
