--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -19,7 +19,9 @@ body {
   z-index: 5;
 }
 .aligncenter{
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   background-color: lightgray;
   align-content: center;
   float: center;
