--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -20,10 +20,9 @@ body {
 }
 .aligncenter{
   position: absolute;
-  top: 50%;
-  left: 50%;
   background-color: lightgray;
   align-content: center;
+  align-self: center;
   float: center;
   height: 1080px;
   width: 600px;
