--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -19,9 +19,8 @@ body {
   z-index: 5;
 }
 .aligncenter{
-  position: absolute;
+  margin: center;
   background-color: lightgray;
-  align-content: center;
   align-self: center;
   float: center;
   height: 1080px;
