--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -7,8 +7,9 @@ body {
   align-self: center;
   height: 945px;
   width: 450px;
-  
+  z-index: auto;
 }
+
 .alignleft{
   position: relative;
   float: left;
