--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -2,7 +2,7 @@ body {
   background-color: white;
 }
 
-.foreground{
+#center{
   background-color: lightgray;
   align-self: center;
   height: 945px;
