--- a/Assignment 5/css/style.css
+++ b/Assignment 5/css/style.css
@@ -4,17 +4,18 @@ body {
 
 #center{
   background-color: lightgray;
-  margin-right: 600px;
+  align-items: center;
+  align-content: center;
   height: 945px;
   width: 450px;
-  z-index: 5;
+  z-index: 10;
 }
 
 .alignleft{
   position: relative;
   float: left;
   align-content: right;
-z-index: 10;
+  z-index: 5;
 
 }
 
@@ -22,6 +23,6 @@ z-index: 10;
   position: relative;
   float: right;
   align-content: left;
-  z-index: 10;
+  z-index: 5;
 
 }
