--- a/Assignment 6/css/style.css
+++ b/Assignment 6/css/style.css
@@ -5,8 +5,8 @@
 body{
   background-color: rgb( 11, 14, 126);
 }
-.text{
+#story{
   background-color: lightgray;
-  text-decoration-color: White;
-  
+  align-content: center;
+
 }
