--- a/Assignment 6/css/style.css
+++ b/Assignment 6/css/style.css
@@ -1,7 +1,10 @@
-*{
-  font-family: 'Raleway', sans-serif;
+*
+  {
+    font-family: 'CooperHewittBold';
+    font-weight: normal;
+    font-style: normal;
+ }
 
-}
 body{
   background-color: rgb( 11, 14, 126);
 }
