--- a/Assignment 6/css/style.css
+++ b/Assignment 6/css/style.css
@@ -1,9 +1,9 @@
 *
   {
-    font-family: 'CooperHewittBold';
-    font-weight: normal;
-    font-style: normal;
- }
+    font-family: 'CompHandMedium';
+   font-weight: normal;
+   font-style: normal;
+}
 
 body{
   background-color: rgb( 11, 14, 126);
