--- a/Assignment 6/css/style.css
+++ b/Assignment 6/css/style.css
@@ -3,6 +3,8 @@
     font-family: 'CompHandMedium';
    font-weight: normal;
    font-style: normal;
+   font-size: 25pt;
+   text-align: center;
 }
 
 body{
