--- a/Assignment 6/css/style.css
+++ b/Assignment 6/css/style.css
@@ -1,19 +1,52 @@
-*
-  {
-    font-family: 'CompHandMedium';
-   font-weight: normal;
-   font-style: normal;
-   font-size: 16pt;
-   text-align: center;
-}
 
 body{
-  background-color: rgb(16, 17, 56);
+  background-color: rgba(25, 26, 70, 0.94);
+  background-image: url("../images/Nw9KR.png");
+
 }
 #story{
-  background-color: lightgray;
-  opacity: : 0.5;
-  align-content: center;
+  background-color:rgba(251, 247, 239,.8);
   width: 600px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 105px;
+}
+#text{
+opacity: 1;
+
+font-family: 'Raleway', sans-serif;
+ font-weight: normal;
+ font-style: normal;
+ font-size: 13pt;
+ text-align: center;
+}
+
+#title{
+  font-family: 'Special Elite', cursive;
+   font-weight: normal;
+   font-style: normal;
+   font-size: 32pt;
+   text-align: center;
+   color: rgba(230, 207, 69, 0.72);
+   margin-top: 100px;
+
+}
+
+button {
+  background-color: purple;
+  color: rgba(230, 207, 69, 0.72);
+  font-family:'Special Elite', cursive;
+  font-size: 20px;
+  padding: 20px 40px;
+  border-radius: 14px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  opacity: 1;
 
 }
